--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyBmroXfXDunBjw2un1XtPeBheN1NvmEgb0"></script>
-  <title>React App</title>
+  <title>Travel Companion</title>
 </head>
 
 <body>
